# rust-minimax

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: board.rs  error.rs  eval.rs  field.rs  game.rs  lib.rs  main.rs  player.rs  state.rs
src/network/: client.rs  connection.rs  protocol.rs  server.rs
src/server/: connection.rs  game_server.rs  mod.rs  protocol.rs
web/: .babelrc  index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
