[package]
name = "darkruby-tictactoe"
version = "0.3.0"
authors = ["Art Deineka @darkest_ruby"]
edition = "2018"
description = "tictactoe minimax engine"
license = "LGPL-3.0"
repository = "https://github.com/venil7/rust-minimax.git"
default-run = "server"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.6"
rayon = "1.0"
tokio = { version = "0.3", features = ["full"] }

[[bin]]
name = "cli"

[[bin]]
name = "server"